# artificial-neural-network

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: artificial-neural-network.hpp  layer.hpp  neuron.hpp
libraries/: matrix.cpp  matrix.hpp  random.cpp  random.hpp
sources/: artificial-neural-network.cpp  layer.cpp  neuron.cpp
